 <resources>
    <string name="app_name">TempleApp</string>
    <string name="read">Read</string>
    <string name="read_all">Read All</string>
    <string name="empty">"     "</string>
    <string name="delete_donated">Selected To Delete Donated Money</string>
    <string name="delete_pooja">Selected To Delete Registered Pooja</string>
    <string name="REG">REG</string>
    <string name="DON">DON</string>
    <string name="wait">Hey Wait Please...</string>
    <string name="deleting">Deleting...</string>
    <string name="id_value">IDVALUE</string>
    <string name="json_obj">Json obj</string>
    <string name="result">result</string>
    <string name="selected_donate">Selected To Donate Money</string>
    <string name="selected_register">Selected To Register New Pooja</string>
    <string name="select_pooja_type">Select Pooja Type</string>
    <string name="PAID">PAID</string>
    <string name="NOT_PAID">NOT PAID</string>
    <string name="valid_ID">Please enter a valid user ID</string>
    <string name="insert">Inserting your values..</string>
    <string name="exception">exception</string>
    <string name="UPDATE">Selected To update donated money details</string>
    <string name="update_pooja">Selected To update Registered Pooja details</string>
    <string name="JSON">I am getting your JSON</string>
    <string name="ID_value">IDVALUE</string>
    <string name="user">user</string>
    <string name="ID">ID:</string>
    <string name="ID_">ID</string>
    <string name="name">Name:</string>
    <string name="name_">NAME</string>
    <string name="type_of_pooja">Type of pooja:</string>
    <string name="money_donated">Money Donated:</string>
    <string name="paid_status">Paid Staus:</string>
    <string name="id_not_found">ID not found</string>
    <string name="internet_warn">You need internet connection for this app. Please turn on mobile network or Wi-Fi in Settings.</string>
    <string name="unable_to_connect">Unable to connect</string>
    <string name="settings">Settings</string>
    <string name="Cancel">Cancel</string>
    <string name="fetch">Fetching all the Values</string>
    <string name="records">records</string>
    <string name="no_data">No data found</string>
    <string name="enter_money_donated">Enter Money Donated</string>
    <string name="people_who_registered_for_pooja">People Who Registered For Pooja</string>
    <string name="people_who_donated_money_for_temple">People Who Donated Money For Temple</string>
    <string name="user_id">User ID</string>
    <string name="delete">Delete</string>
    <string name="register_for_new_pooja">Register For New Pooja</string>
    <string name="donate_money_to_temple">Donate Money To Temple</string>
    <string name="insert_">Insert</string>
    <string name="list_of_donated_people_who_paid_only">List Of Donated People: who paid only</string>
    <string name="list_of_donated_people_who_not_paid_only">List Of Donated People: who not paid only</string>
    <string name="list_of_registered_poojas_people_who_paid_only">List Of Registered Poojas: people who paid only</string>
    <string name="list_of_registered_poojas_who_not_paid_only">List Of Registered Poojas: who not paid only</string>
    <string name="find">Find</string>
    <string name="update_registered_pooja_details">Update Registered Pooja Details</string>
    <string name="update_the_details_of_donated_money">Update The Details Of Donated Money</string>
    <string name="update">Update</string>
    <string name="fetching">Fetching Your Values</string>
    <string name="Json_obj">Json obj</string>
    <string name="Name">name</string>
    <string name="amt">Amount:    Rs.</string>
    <string name="paidstatus">Paid Status: </string>


    <string-array name="pooja_types">
        <item>Type 1</item>
        <item>Type 2</item>
        <item>Type 3</item>
        <item>Type 4</item>
        <item>Custom Pooja</item>
    </string-array>
</resources>
