<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="androidlabs.TempleApp.MainActivity">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_insert"
        android:id="@+id/insert_btn"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:id="@+id/delete_btn"
        android:layout_below="@+id/read_all_btn"
        android:layout_alignLeft="@+id/read_all_btn"
        android:layout_alignStart="@+id/read_all_btn"
        android:layout_alignRight="@+id/read_all_btn"
        android:layout_alignEnd="@+id/read_all_btn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read"
        android:id="@+id/read_btn"
        android:layout_below="@+id/insert_btn"
        android:layout_alignLeft="@+id/insert_btn"
        android:layout_alignStart="@+id/insert_btn"
        android:layout_alignRight="@+id/insert_btn"
        android:layout_alignEnd="@+id/insert_btn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_all"
        android:id="@+id/read_all_btn"
        android:layout_below="@+id/update_btn"
        android:layout_alignLeft="@+id/update_btn"
        android:layout_alignStart="@+id/update_btn"
        android:layout_alignRight="@+id/update_btn"
        android:layout_alignEnd="@+id/update_btn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:id="@+id/update_btn"
        android:layout_below="@+id/read_btn"
        android:layout_alignLeft="@+id/read_btn"
        android:layout_alignStart="@+id/read_btn"
        android:layout_alignRight="@+id/read_btn"
        android:layout_alignEnd="@+id/read_btn" />


</RelativeLayout>
